[package]
name = "home_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
itertools = "0.10"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
structopt = "0.3"
tonic = "0.6"
prost = "0.9"
log = "0.4"
env_logger = "0.9"
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
system_shutdown = "3.0"

[build-dependencies]
tonic-build = "0.5"
vergen = "3"
